docs: add documantation for Show Openings
